# myPortfolio

./: README.md
GameDesign/: Bat.cpp  Bat.h  CMakeLists.txt  Readme.md  main.cpp
GameDesign/Lab1/: main.cpp
GameDesign/Lab1/HelloWorld/: HelloWorld.cpp  HelloWorld.sln  HelloWorld.vcxproj
GameDesign/Lab2/RingAround/: RingAround.cpp  RingAround.sln  RingAround.vcxproj  RingAround.vcxproj.filters
GameDesign/Lab3/GoneBatty/: GoneBatty.cpp  GoneBatty.sln  GoneBatty.vcxproj  GoneBatty.vcxproj.filters
GameDesign/Thomas/PlayableCharacter/: Bob.h  DetectCollisions.cpp  Draw.cpp  Engine.h  Input.cpp  LevelManager.cpp  Particle.h  ParticleSystem.cpp  PlayableCharacter.cpp  PlayableCharacter.sln  PlayableCharacter.vcxproj  PlayableCharacter.vcxproj.filters  Thomas.h  Update.cpp
GameDesign/TimberModCarGame/: TimberModCarGame.cpp  TimberModCarGame.sln  TimberModCarGame.vcxproj  TimberModCarGame.vcxproj.filters
GameDesign/ZombieArena/: Bullet.cpp  Player.cpp  Zombie.cpp  Zombie.h  ZombieArena.cpp  ZombieArena.sln  ZombieArena.vcxproj  ZombieArena.vcxproj.filters
GameDesign2/: README.md
GameLevelEditor/: README.md
PowerPresentingNotes /: LICENSE  PowerPresentingNotes.py  PowerPresentingNotes.spec  README.md  fontSettingExample.py  myfile.txt  newFile.txt  selectFontExample.py
SoftwareDev/: readme
StarbucksPrototype/: asset-manifest.json  index.html  precache-manifest.8412564896fd4296f33137dcb95c07ad.js  service-worker.js
WebDev/: README.md  about.html  checkout.html  faq.html  homepage.html  store.html
chuney-Site/: 3rdpartylicenses.txt  index.html  (+4 more)
(+181 files in other folders)
